--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Min Gar Lar Par</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati pariatur odit ratione quas magni nulla eligendi officia doloremque. Sunt in numquam et a adipisci totam velit repellendus vel nam dolores?</p>
     <script src="js/app.js"></script>
     
 </body>
